Fixing pathing issues and maybe a UTF8 problem

--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
     <title>Clean Blog - Contact</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link href="bootstrap/css/clean-blog.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -12258,7 +12258,7 @@ d-\Æ×‚ŠîäµÛå‰H?)-jra
 š–Ö°F¥™¸"
 šŒ¸xŒLOk}8îÞæ&ùU‚ÜQpÚð§ÄM<1§m§z{5›s3_¢mqy<+¸|äÑrCgm
 Z€±'ÊËkÓ‰ÍFüílðŸ‹èñ4ô„^=ÊHÐÌ‘¬d­jsé×õk>SuµÝGn³IutÐÕC¥a—œ
-ÓëžYÝ‹ï¦›€†y¡h®¤‰Cº‰B¶‰T€y{ð¶ê£YUmÏµ·Í°{jñUDšô’ºOyq–/(y
+ÓëžYÝ‹ï¦›€†y¡h®¤‰Cº‰B¶‰T€y{ð¶ê£YUmÏµ·Í°{jñUDšô’ºOyq–/(y
 Ðƒ÷Žx—5ËÝ†xr¦µ­iÃ½æáL"xðÃ)¡ðc³Kx¡V„Ç›™¯Ž8{sœWÒ}OI¤ºÂþa:óë‰õ­?~¿ýŸ_MdQËC!V­U‡‡ïÇµÎ_.Ügïíÿ Q€IœÚ™Þ<«…K§ˆOÌgâÁa»·ëø[Šå–“Üˆ³²ò·ya…y±#}±ElŠÒjúŽìZBx³Rj1Ç–‘v³"ÛoŒ·½ØÞxH)5X15?n9æjÐu Ï¦Ð„Ž^cí8`Mº+ÄV”V5zgZ öÆ{‰£…<ŠŠÏ#œ‘W™4û1CŠõõšÉ~b ‹{ÕX‚ÿ ù@)O"xŒEœ)Mßèu·mÝúÏ—A’'¨ˆÚÇŸËF–&iÂ7¹ŠßÒºçaúca¹Ù½£[	N©  ~]A<)ˆÖY²ºü>¯‚uxƒ.b•®5DgQ6¸`ÜÓpX€kG§9‡Ú1YáZrÎ»ŠÚ(v²º\± è„jmgáË)Áïx°vyïVP´{dèÜ=Y‡¤„uzcY¼Ã?UÖËè¥úZ´—û¤V×µ8Â—Œû^£î›ØpžæÚv^ÐŠŽäÞ™­å¢"ZD¡‹Ò´%‰ é–2¿–³b{k¼ûi—Ð°õ"¬ó¸•òç ùiìÃ×ŸnUþúŸjÙwùàžåÖ€.mUb“1§O,eÙÛ®—–ý=ï8@Çk;t»‘y>^6¥\Ä¯E=pNÝ}}¾ôm6õGXî–w—Á$¢Ñ-*TðËßƒNéµÁöý{¤Ë—×1¨`¹¢é÷Œk—5÷ÂŽE ©5öeÇ¦Xq—ìíE:W÷cIQM•½ŠÒ5ès8ÓÛÉ_":äcÃ?f*l~¥‹["(Â¾$šâóipe ³PHˆ58Óm“àÄ ü¸†|€¯sí§áS‚5LÜ#§ (+–2ÅV\1Ü)Ë!Q\þÌMÔd¸íwC-ŒÁ˜<ÍM0ù=Íp“jqG4£x89¥é=¥ößgò–iQ3´ŒhjY¹ÔýØ×^Ëk[l›¤Û´‹1’q:ÉB´wàð¡ÂöåSJØl~ŽÚµ¥¼—»”«z«ª@ˆ¥0Ì sÃý£7£’®Ór‚ƒùs!Aíªv.vóà±UÍói›µ‘$Û·Ÿq§þ\R9*k\tifÜQx³}0ï-þ_š¾-g¹½ÕÙ-3Ñ8ý¸{÷k¯Z—fý8Ø{X™íC\nº^òZj ñKŽ=ûnÊšàÿ qwÇml´3‹‹ÄÍ-`ó½|y~"KWË6ß~ª÷ç#Cb×eÁŒD4ä²*û°ý0yPçO^i%¹ŸÕ·ê¹2>]O÷âEÍ[;K½§Øíï!Uišá?$…‹ ÈEE0è„?r^­Å†ãnÒ.ãom,3	Î«vy2*V«NX †‚Öeõebs1-$™Kœ/Q–·p/åµrÓPG¿[àBo…d¥ÊQé£ñ0æÿ ’À¨·-¹Þ‹"-+Fa—˜â³Ãºí@7pxpÃíy„LÓís¦“uu*<FÂÀ{k«˜æôÙÖxNQÌ„<yÏ‚¥Í$1–âxãfÉSY¦‘à3®Éäðƒ¼ÞÙµ¥¿æ+CÔŸ1ÄíÙ<A„bêÒÉFvã—ÝŒmäNü¥_TqQPzP;…äPy§pŽæ™ó'¦&ðÎÙí¢Ç=\s8g¤vök5žTksè¢ê2£˜Ëü@ûÆ3ßlLµœÜŠ4XÕÒEœyØ±y(yj<=Àb:-ºç
 ìÄ=´©'Ùåf{¶­‘\î5«]>˜úˆÓ!ƒ§\Luj%üéäÖÉðB¿†œÉÆ¶g’»îÛÚ$¹ «ÆƒwÀ®Ép¶Ûl×Ry” j6T|>èÓ|"øÊ¤7¼GôÉŽß
 ÐƒŸSÇòfeËo.Œzµ¨£Ò•éí®+ ¦/)ÐŒ4PµOßïÄmœ„Ýw[¨¡0ÄÁ<ÆdS§·]k•{åî¤X¤õ‰•'Uxe²§œ,;nGoÜ_ùœ’VYc¶­uëü¤'ºb¢4P‚”sÀPcÚ€Ý(‘¨<¨æq8ÀkùbS­Ž£§,‰Àa³¡ –T`êt¥s9à,dí•ç¥t²ÈªÀÌšÖ£<gÛ­ºðèúÝ³]å³€sÜzÚÕ#-——ZSë19a½—{aPÛ§­’×P¯°Ö‡öáåÊw´;GrÞ·QohŠÊ„¤|£Jåæ=OL9¥ßˆÓ®úm›Ëuƒµ»3éÏmÁ»5°¼ßdb¬e`iÁj)¤c§¯I§{.j¡¾÷žå{ï{<Q³Û°k›`º'Žœ+“)äqÕïÇ{¾|,]“õl†ö=Î×lüÛˆýÞÑMÈj†>lƒ¿Ý}çò­7‰=·¸·uºº°Ø®%Ûc»&ói-#m?/-AÖjh	öcOËyøõKxÚo6«]‚öîiûŽ8–MÂ)•RXÙéPÄ tg‘å‹êüTöIŽYÃu=¦ýw³ïÕ{˜ÂÃ·3šÃ*($BòP²! lW]ø®{ÅÅÝÉigˆ¡’[UÔ-!yhÈ ùí‰’ªÚO xâí˜)¼ð…»?J{²dHýMw™XKê)Ž/P|,4’¹ôÆ^ºÖ¿
