Adding updated index and css files with main header and first link

--- a/excursion/index.html
+++ b/excursion/index.html
@@ -1,1 +1,13 @@
-Hello World (again)
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Excursion</title>
+    <link href="/Users/alexlucke/alexlucke.github.io/excursion/resources/css/style.css" type="text/css" rel="stylesheet">
+  </head>
+
+  <body>
+    <h1>Discover hidden places in the world around you</h1>
+    <a class="link" href="https://d4bj4rmjttpvmbb7c2skr3h5rdgg9kabp2tamhhqqvtrl6ej83lg.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a>
+  </body>
+</html>
