Other main headings and coordinating css

--- a/excursion/index.html
+++ b/excursion/index.html
@@ -9,5 +9,10 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <a class="link" href="https://d4bj4rmjttpvmbb7c2skr3h5rdgg9kabp2tamhhqqvtrl6ej83lg.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a>
+
+    <h2>Your personal travel guide</h>
+      <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+
+
   </body>
 </html>
