Adding phone image and centering the website

--- a/excursion/index.html
+++ b/excursion/index.html
@@ -10,6 +10,8 @@
     <h1>Discover hidden places in the world around you</h1>
     <a class="link" href="https://d4bj4rmjttpvmbb7c2skr3h5rdgg9kabp2tamhhqqvtrl6ej83lg.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a>
 
+    <p class=phone><img src="/Users/alexlucke/alexlucke.github.io/excursion/resources/images/phone.png" alt="phone"></img></p>
+
     <h2>Your personal travel guide</h>
       <p>Excursion remembers places you like, and recommends new points of interest around you</p>
 
