Finishing up the footer and final CSS, this should be the finished product

--- a/excursion/index.html
+++ b/excursion/index.html
@@ -16,10 +16,22 @@
     </video>
   </p>
 
-
-
-    <h2>Your personal travel guide</h>
+  <h2>Your personal travel guide</h>
       <p>Excursion remembers places you like, and recommends new points of interest around you</p>
+
+  <p class=camp>
+    <img src="/Users/alexlucke/alexlucke.github.io/excursion/resources/images/camp.jpg" alt="campsite"></img>
+  </p>
+
+  <p class=smallphone><img src="/Users/alexlucke/alexlucke.github.io/excursion/resources/images/phone.png" alt="phone"></img></p>
+
+  <h2>Coming Soon for iPhone and Android</h2>
+
+  <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
+
+  <div class="footer">
+      <p>© Excursion</p>
+    </div>
 
 
   </body>
