--- a/broadway/index.html
+++ b/broadway/index.html
@@ -9,20 +9,20 @@
     <h1>Broadway Design</h>
       <nav>
         <ul>
-          <p>Home</p>
-          <p>About</p>
-          <p>Work</p>
-          <p>Team</p>
-          <p>Contact</p>
+          <p href="#">Home</p>
+          <p href="#process">About</p>
+          <p href="#work">Work</p>
+          <p href="#team">Team</p>
+          <p href="#contact">Contact</p>
         </ul>
       </nav>
 
       <!-- Process Section -->
-      <div clas="process">
+      <div class="main" id="process">
         <h3>Our Process</h3>
           <img src = "https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="Identify Logo" />
           <h2>Identify</h2>
-            <p>We focus on the most iportant details</p>
+            <p>We focus on the most important details</p>
           <img src = "https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="Understand Logo" />
           <h2>Understand</h2>
             <p>We study our projects inside and out</p>
@@ -35,12 +35,43 @@
 
       <h2 class = "design">Designed in New York</h2>
 
+      <!-- About section -->
 
+      <div class="main" id="work">
+        <div class="main-item">
+          <h3>Portfolio</h3>
+            <p>Coming soon</p>
+          </div>
+        </div>
 
-      <div class="work">
-
+      <div class="main" id="team">
+        <div class="main-item">
+          <h3>Team</h3>
+            <p>We're hiring</p>
+        </div>
       </div>
 
+      <div class="main" id="contact">
+        <div class="main-item">
+          <h3>Contact</h3>
+            <p>Phone: (555)-555-5555</p>
+            <p>E-mail: test@example.com</p>
+            <p>Twitter: @test</p>
+        </div>
+      </div>
+
+      <!-- Footer Section -->
+
+      div class="footer">
+        <p>
+          © Broadway 2017
+          <a class="btn-nav" href="#">Home</a>
+          <a class="btn-nav" href="#about">About</a>
+          <a class="btn-nav" href="#work">Work</a>
+          <a class="btn-nav" href="#team">Team</a>
+          <a class="btn-nav" href="#contact">Contact</a>
+        </p>
+      </div>
 
   </body>
 </html>
